fix: waggon title spacing

--- a/src/components/sbb-wagon/sbb-wagon.scss
+++ b/src/components/sbb-wagon/sbb-wagon.scss
@@ -62,7 +62,7 @@
 }
 
 .sbb-wagon__class {
-  @include sbb.title-6;
+  @include sbb.title-6($exclude-spacing: true);
 
   margin-inline-start: auto;
 }
